Made it look better by fixing a broken stylesheet link and removing an unnecessary hover animation. Changes: 	modified:   static/css/index.css 	modified:   static/html/index.html 	modified:   templates/ranking.html

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -25,15 +25,6 @@ body {
     border-radius: 4px;
 }
 
-.btn:hover {
-    background-color: #555;
-    animation: 0.2s ease-in 0s 1 normal running btn-hover;
-}
-@keyframes btn-hover {
-    from { background-color: #444; }
-    to { background-color: #555; }
-}
-
 .timer-container {
     display: flex;
     justify-content: center;
